Updates from Overleaf

--- a/report2.tex
+++ b/report2.tex
@@ -321,7 +321,7 @@ Podemos medir la distancia $d$ utilizando el programa ImageJ. Utilizando la imag
 % Usamos a~\ref{} porque ~ es un espacio irrompible.  Si utilizas a ~\ref{}. Tienes dos espacios, uno irrompible, y otro normal.
 
 \begin{center}
-    $p = 130 \unit{\nano\meter}$
+    $p = 130 \unit{\micro\meter}$
 \end{center}
 
 \begin{figure}[hptb]
