--- a/report2.tex
+++ b/report2.tex
@@ -442,7 +442,7 @@ Como la Fourier de la red periódica será representada por unos desplazamientos
 
 \section{Formación de imágenes con luz parcialmente coherente}
 
-En esta sección comparamos los efectos de iluminar el objeto con luz coherente y con luz incoherente. 
+En esta sección comparamos los efectos de iluminar el objeto con luz coherente y con luz incoherente. Para generar la iluminación incoherente se utilizó un difusor girando. En la figura ~\ref{fig:coherente} y ~\ref{fig:incoherente} se muestran los efectos de iluminar con sendos tipos de fuente.
 
 \subsection{Cuestiones}
 \subsubsection{¿El rango de distancias donde observamos la imagen del objeto 2D es mayor en el caso iluminación coherente o parcialmente coherente? ¿Qué iluminación es mejor para la observación de objetos 3D?}
@@ -451,7 +451,19 @@ Con luz coherente podemos observar objetos en muchos planos distintos a la vez, 
 
 Para la observación de objetos 3D la iluminación coherente es mejor, si podemos usar técnicas en las que separemos la fase y filtremos la imagen adecuadamente para extraer más información. Si lo que queremos es obtener un plano del objeto 3D, con luz incoherente, enfocaremos solo en ese plano.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.18]{parte5-luz-coherente/imagen-letras-con-difusor-y-grating.png}
+    \caption{Imagen con iluminación incoherente}
+    \label{fig:incoherente}
+\end{figure}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[scale=0.18]{parte5-luz-coherente/imagen-letras-no-difusor-y-grating.png}
+    \caption{Imagen con iluminación coherente}
+    \label{fig:coherente}
+\end{figure}
 
 %%%%%%%%%% If using BibTeX:
 %\bibliography{bibliography}
