Add comparison figure

--- a/report2.tex
+++ b/report2.tex
@@ -470,6 +470,28 @@ Para la observación de objetos 3D la iluminación coherente es mejor, si podemo
     \label{fig:coherente}
 \end{figure}
 
+\begin{figure}[hbp]
+	\centering
+
+	\newcommand\centerbox[2][width=0.15\textwidth, trim=-.5cm -.5cm -.5cm -.5cm]{\raisebox{-.5\height}{\includegraphics[#1]{#2}}}
+
+	\begin{tabular}{ l | c c c }
+		Luz coherente                                                                               &
+		\centerbox{parte5-luz-coherente/imagen-letras.png}                                          &
+		\centerbox{parte5-luz-coherente/imagen-letras-no-difusor-y-grating-enfocado-en-grating.png} &
+		\centerbox{parte5-luz-coherente/imagen-letras-no-difusor-y-grating.png}                       \\
+		\hline
+		Luz incoherente                                                                             &
+		\centerbox{parte5-luz-coherente/imagen-letras-con-difusor-mas-lejos.png}                    &
+		\centerbox{parte5-luz-coherente/imagen-letras-con-difusor-moviendose.png}                   &
+		\centerbox{parte5-luz-coherente/imagen-letras-con-difusor-y-grating-enfocado-en-grating.png}  \\
+		                                                                                            &
+		\centerbox{parte5-luz-coherente/imagen-letras-con-difusor-y-grating.png}                    &
+		\centerbox{parte5-luz-coherente/imagen-letras-con-difusor.png}                              &
+	\end{tabular}
+	\caption{Letras a través de un difusor moviendose para generar luz coherente o incoherente. Notese que }
+
+\end{figure}
 %%%%%%%%%% If using BibTeX:
 %\bibliography{bibliography}
 
